--- a/hackslashtask1/pubspec.yaml
+++ b/hackslashtask1/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/images/blackimg.webp
+    - lib/images/R.jpeg
+    - lib/images/profile.jpeg
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
