--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,11 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/roboto_regular.ttf
+        - asset: assets/fonts/roboto_medium.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
